# false-refusal-suppression

./: .gitignore  README.md  pyproject.toml
artifacts/edits/: llama31_8b_bf16_orbench_search.json
configs/data/: prompt_sets.yaml  prompt_sets_gemini_pilot.yaml  prompt_sets_gemini_v1.yaml  prompt_sets_pilot.yaml  prompt_sets_small.yaml
configs/edit/: norm_preserving.yaml  projected.yaml  search.yaml  single_direction.yaml
configs/model/: gemma4_e2b.yaml  phi4_mini.yaml  qwen25_3b_fallback.yaml  qwen3_4b.yaml
configs/train/: qlora_repair.yaml
data/processed/prompts/: pilot_prompts.jsonl  pilot_prompts_gemini.jsonl  sample_prompts.jsonl  xstest_prompts.jsonl
data/processed/splits/orbench/: discovery.jsonl  holdout.jsonl  selection.jsonl
notebooks/: 00_data_audit.ipynb  10_activation_geometry.ipynb  20_edit_search.ipynb  30_eval_and_error_analysis.ipynb
scripts/: build_prompt_sets.py  compute_directions.py  convert_orbench.py  convert_xstest.py  make_splits.py  measure_activations.py  run_edit.py  run_eval.py  search_edits.py  summarize_results.py  train_qlora_repair.py
src/frs/: __init__.py
src/frs/data/: augmentation.py  config.py  loaders.py  manifests.py  prompts.py  schemas.py  splits.py
src/frs/editing/: apply_edit.py  directions.py  norm_preserving.py  projection.py  search.py
src/frs/evaluation/: capability.py  drift.py  metrics.py  refusal.py  reports.py
src/frs/models/: generation.py  hooks.py  loader.py
src/frs/training/: qlora.py  unsloth_runner.py
src/frs/utils/: env.py  gemini.py  io.py  logging.py  seeds.py
tests/: test_direction_shapes.py  test_edit_application.py  test_metrics.py  test_prompt_config.py  test_prompt_generation.py  test_prompt_splits.py  test_training.py
(+12 files in other folders)
