[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refusal-suppression"
version = "0.1.0"
description = "Locate and ablate the refusal direction in instruction-tuned LLMs via activation geometry and directional weight editing"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Aaliyan" }
]
dependencies = []

[project.optional-dependencies]
train = [
  "torch>=2.2",
  "transformers>=4.51",
  "accelerate>=1.6",
  "datasets>=3.5",
  "bitsandbytes>=0.45; platform_system != 'Darwin'",
  "peft>=0.15",
  "trl>=0.17",
  "unsloth>=2025.3"
]
dev = [
  "pytest>=8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
